website/versioned_docs/version-1.3.0/tutorials/early_stopping/index.mdx
---
title: Trial-level Early Stopping
sidebar_label: Trial-level Early Stopping
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/facebook/ax/blob/main/tutorials/early_stopping/early_stopping.ipynb"
  colabUrl="https://colab.research.google.com/github/facebook/ax/blob/main/tutorials/early_stopping/early_stopping.ipynb"
/>

# Trial-level early stopping

Trial-level early stopping aims to monitor the results of expensive evaluations with
timeseries-like data and terminate those that are unlikely to produce promising results
prior to completing that evaluation. This reduces computational waste, and enables the
same amount of resources to explore more configurations. Early stopping is useful for
expensive to evaluate problems where stepwise information is available on the way to the
final measurement.

Like the [Getting Started tutorial](../getting_started) we'll be minimizing the
Hartmann6 function, but this time we've modified it to incorporate a new parameter $t$
which allows the function to produce timeseries-like data where the value returned is
closer and closer to Hartmann6's true value as $t$ increases. At $t = 100$ the function
will simply return Hartmann6's unaltered value.

$$

f(x, t) = hartmann6(x) - log_2(t/100)

$$

While the function is synthetic, the workflow captures the intended principles for this
tutorial and is similar to the process of training typical machine learning models.

## Learning Objectives

- Understand when time-series-like data can be used in an optimization experiment
- Run a simple optimization experiment with early stopping
- Configure details of an early stopping strategy
- Analyze the results of the optimization

## Prerequisites

- Familiarity with Python and basic programming concepts
- Understanding of [adaptive experimentation](../../intro-to-ae.mdx) and
  [Bayesian optimization](../../intro-to-bo.mdx)
- [Getting Started with Ax](../getting_started/index.mdx)

## Step 1: Import Necessary Modules

First, ensure you have all the necessary imports:

```python
import numpy as np
from ax.api.client import Client
from ax.api.configs import  RangeParameterConfig
```

<CellOutput>
{
`[INFO 06-04 15:52:04] ax.storage.sqa_store.with_db_settings_base: Ax SQL storage initialized with SQLAlchemy 1.4.17`
}
</CellOutput>

## Step 2: Initialize the Client

Create an instance of the `Client` to manage the state of your experiment.

```python
client = Client()
```

## Step 3: Configure the Experiment

The `Client` instance can be configured with a series of `Config`s that define how the
experiment will be run.

The Hartmann6 problem is usually evaluated on the hypercube $x_i \in (0, 1)$, so we will
define six identical `RangeParameterConfig`s with these bounds.

You may specify additional features like parameter constraints to further refine the
search space and parameter scaling to help navigate parameters with nonuniform effects.

```python
# Define six float parameters for the Hartmann6 function
parameters = [
    RangeParameterConfig(
        name=f"x{i + 1}", parameter_type="float", bounds=(0, 1)
    )
    for i in range(6)
]

client.configure_experiment(parameters=parameters)
```

## Step 4: Configure Optimization

Now, we must configure the objective for this optimization, which we do using
`Client.configure_optimization`. This method expects a string `objective`, an expression
containing either a single metric to maximize, a linear combination of metrics to
maximize, or a tuple of multiple metrics to jointly maximize. These expressions are
parsed using [SymPy](https://www.sympy.org/en/index.html). For example:

- `"score"` would direct Ax to maximize a metric named score
- `"-loss"` would direct Ax to Ax to minimize a metric named loss
- `"task_0 + 0.5 * task_1"` would direct Ax to maximize the sum of two task scores,
  downweighting task_1 by a factor of 0.5
- `"score, -flops"` would direct Ax to simultaneously maximize score while minimizing
  flops

See these recipes for more information on configuring
[objectives](../../recipes/multi-objective-optimization) and
[outcome constraints](../../recipes/outcome-constraints).

```python
client.configure_optimization(objective="-hartmann6")
```

## Step 5: Run Trials with early stopping

Here, we will configure the ask-tell loop.

We begin by defining our Hartmann6 function as written above. Remember, this is just an
example problem and any Python function can be substituted here.

Then we will iteratively do the following:

- Call `client.get_next_trials` to "ask" Ax for a parameterization to evaluate
- Evaluate `hartmann6_curve` using those parameters in an inner loop to simulate the
  generation of timeseries data
- "Tell" Ax the partial result using `client.attach_data`
- Query whether the trial should be stopped via `client.should_stop_trial_early`
- Stop the underperforming trial and report back to Ax that is has been stopped

This loop will run multiple trials to optimize the function.

Ax will configure an EarlyStoppingStrategy when `should_stop_trial_early` is called for
the first time. By default Ax uses a Percentile early stopping strategy which will
terminate a trial early if its performance falls below a percentile threshold when
compared to other trials at the same step. Early stopping can only occur after a minimum
number of `progressions` to prevent premature early stopping. This validates that both
enough data is gathered to make a decision and there is a minimum number of completed
trials with curve data; these completed trials establish a baseline.

```python
# Hartmann6 function
def hartmann6(x1, x2, x3, x4, x5, x6):
    alpha = np.array([1.0, 1.2, 3.0, 3.2])
    A = np.array(
        [
            [10, 3, 17, 3.5, 1.7, 8],
            [0.05, 10, 17, 0.1, 8, 14],
            [3, 3.5, 1.7, 10, 17, 8],
            [17, 8, 0.05, 10, 0.1, 14],
        ]
    )
    P = 10**-4 * np.array(
        [
            [1312, 1696, 5569, 124, 8283, 5886],
            [2329, 4135, 8307, 3736, 1004, 9991],
            [2348, 1451, 3522, 2883, 3047, 6650],
            [4047, 8828, 8732, 5743, 1091, 381],
        ]
    )

    outer = 0.0
    for i in range(4):
        inner = 0.0
        for j, x in enumerate([x1, x2, x3, x4, x5, x6]):
            inner += A[i, j] * (x - P[i, j]) ** 2
        outer += alpha[i] * np.exp(-inner)
    return -outer


# Hartmann6 function with additional t term such that
# hartmann6(X) == hartmann6_curve(X, t=100)
def hartmann6_curve(x1, x2, x3, x4, x5, x6, t):
    return hartmann6(x1, x2, x3, x4, x5, x6) - np.log2(t / 100)


(
    hartmann6(0.1, 0.45, 0.8, 0.25, 0.552, 1.0),
    hartmann6_curve(0.1, 0.45, 0.8, 0.25, 0.552, 1.0, 100),
)
```

<CellOutput>
{
`(np.float64(-0.4878737485613134), np.float64(-0.4878737485613134))`
}
</CellOutput>

```python
maximum_progressions = 100  # Observe hartmann6_curve over 100 progressions

for _ in range(30):  # Run 30 rounds of trials
    trials = client.get_next_trials(max_trials=3)
    for trial_index, parameters in trials.items():
        for t in range(1, maximum_progressions + 1):
            raw_data = {"hartmann6": hartmann6_curve(t=t, **parameters)}

            # On the final reading call complete_trial and break, else call attach_data
            if t == maximum_progressions:
                client.complete_trial(
                    trial_index=trial_index, raw_data=raw_data, progression=t
                )
                break

            client.attach_data(
                trial_index=trial_index, raw_data=raw_data, progression=t
            )

            # If the trial is underperforming, stop it
            if client.should_stop_trial_early(trial_index=trial_index):
                client.mark_trial_early_stopped(trial_index=trial_index)
                break
```

<CellOutput>
{
`[INFO 06-04 15:52:05] ax.api.client: GenerationStrategy(name='Center+Sobol+MBM:fast', nodes=[CenterGenerationNode(next_node_name='Sobol', use_existing_trials_for_initialization=True), GenerationNode(name='Sobol', generator_specs=[GeneratorSpec(generator_enum=Sobol, generator_key_override=None)], transition_criteria=[MinTrials(transition_to='MBM'), MinTrials(transition_to='MBM')], suggested_experiment_status=ExperimentStatus.INITIALIZATION, pausing_criteria=[MaxTrialsAwaitingData(threshold=5)]), GenerationNode(name='MBM', generator_specs=[GeneratorSpec(generator_enum=BoTorch, generator_key_override=None)], transition_criteria=None, suggested_experiment_status=ExperimentStatus.OPTIMIZATION, pausing_criteria=None)]) chosen based on user input and problem structure.
[INFO 06-04 15:52:05] ax.api.client: Generated new trial 0 with parameters {'x1': 0.5, 'x2': 0.5, 'x3': 0.5, 'x4': 0.5, 'x5': 0.5, 'x6': 0.5} using GenerationNode CenterOfSearchSpace.
[INFO 06-04 15:52:05] ax.api.client: Generated new trial 1 with parameters {'x1': 0.21073, 'x2': 0.499873, 'x3': 0.262615, 'x4': 0.267971, 'x5': 0.422508, 'x6': 0.998031} using GenerationNode Sobol.
[INFO 06-04 15:52:05] ax.api.client: Generated new trial 2 with parameters {'x1': 0.891623, 'x2': 0.91337, 'x3': 0.605058, 'x4': 0.712411, 'x5': 0.542005, 'x6': 0.479806} using GenerationNode Sobol.
[INFO 06-04 15:52:08] ax.api.client: Trial 0 marked COMPLETED.
[INFO 06-04 15:52:12] ax.api.client: Trial 1 marked COMPLETED.
[INFO 06-04 15:52:16] ax.api.client: Trial 2 marked COMPLETED.
[INFO 06-04 15:52:16] ax.api.client: Generated new trial 3 with parameters {'x1': 0.637901, 'x2': 0.180224, 'x3': 0.235148, 'x4': 0.064872, 'x5': 0.938703, 'x6': 0.147364} using GenerationNode Sobol.
[INFO 06-04 15:52:16] ax.api.client: Generated new trial 4 with parameters {'x1': 0.449196, 'x2': 0.718845, 'x3': 0.898149, 'x4': 0.88431, 'x5': 0.088493, 'x6': 0.625302} using GenerationNode Sobol.
[WARNING 06-04 15:52:16] ax.api.client: 3 trials requested but only 2 could be generated.
[INFO 06-04 15:52:20] ax.api.client: Trial 3 marked COMPLETED.
[INFO 06-04 15:52:25] ax.api.client: Trial 4 marked COMPLETED.
[INFO 06-04 15:52:25] ax.api.client: Generated new trial 5 with parameters {'x1': 0.028324, 'x2': 0.487562, 'x3': 0.0, 'x4': 0.579831, 'x5': 0.492993, 'x6': 1.0} using GenerationNode MBM.
[WARNING 06-04 15:52:25] ax.api.client: 3 trials requested but only 1 could be generated.
[INFO 06-04 15:52:30] ax.api.client: Trial 5 marked COMPLETED.
[INFO 06-04 15:52:32] ax.api.client: Generated new trial 6 with parameters {'x1': 0.318865, 'x2': 0.514624, 'x3': 0.421743, 'x4': 0.254446, 'x5': 0.385976, 'x6': 0.898208} using GenerationNode MBM.
[INFO 06-04 15:52:32] ax.api.client: Generated new trial 7 with parameters {'x1': 0.45479, 'x2': 0.561467, 'x3': 0.285347, 'x4': 0.256874, 'x5': 0.574063, 'x6': 0.788623} using GenerationNode MBM.
[INFO 06-04 15:52:32] ax.api.client: Generated new trial 8 with parameters {'x1': 0.246828, 'x2': 0.39557, 'x3': 0.377812, 'x4': 0.337442, 'x5': 0.329814, 'x6': 0.973753} using GenerationNode MBM.
[INFO 06-04 15:52:37] ax.api.client: Trial 6 marked COMPLETED.
[INFO 06-04 15:52:42] ax.api.client: Trial 7 marked COMPLETED.
[INFO 06-04 15:52:48] ax.api.client: Trial 8 marked COMPLETED.
[INFO 06-04 15:52:49] ax.api.client: Generated new trial 9 with parameters {'x1': 0.152109, 'x2': 0.406611, 'x3': 0.451504, 'x4': 0.148735, 'x5': 0.250339, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:52:49] ax.api.client: Generated new trial 10 with parameters {'x1': 0.25518, 'x2': 0.895351, 'x3': 0.429526, 'x4': 0.439202, 'x5': 0.226567, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:52:49] ax.api.client: Generated new trial 11 with parameters {'x1': 0.413957, 'x2': 0.0, 'x3': 0.438607, 'x4': 0.042497, 'x5': 0.275599, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:52:54] ax.api.client: Trial 9 marked COMPLETED.
[INFO 06-04 15:52:55] ax.api.client: Trial 10 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.1843473604146317]
- Thresholds: [2.929600065255225]
- Number of trials: [11]
- Trial indices: [[0, 5, 3, 7, 8, 1, 6, 9, 4, 10, 2]]
[INFO 06-04 15:52:55] ax.api.client: Trial 10 marked EARLY_STOPPED.
[INFO 06-04 15:53:01] ax.api.client: Trial 11 marked COMPLETED.
[INFO 06-04 15:53:02] ax.api.client: Generated new trial 12 with parameters {'x1': 0.128509, 'x2': 0.294409, 'x3': 0.552341, 'x4': 0.412187, 'x5': 0.348088, 'x6': 0.944299} using GenerationNode MBM.
[INFO 06-04 15:53:02] ax.api.client: Generated new trial 13 with parameters {'x1': 0.768031, 'x2': 0.814594, 'x3': 0.477728, 'x4': 0.379726, 'x5': 0.250889, 'x6': 0.832544} using GenerationNode MBM.
[INFO 06-04 15:53:02] ax.api.client: Generated new trial 14 with parameters {'x1': 0.0, 'x2': 0.297261, 'x3': 0.443291, 'x4': 0.385769, 'x5': 0.251567, 'x6': 0.748025} using GenerationNode MBM.
[INFO 06-04 15:53:08] ax.api.client: Trial 12 marked COMPLETED.
[INFO 06-04 15:53:08] ax.api.client: Trial 13 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.123455718968583]
- Thresholds: [2.873106584220177]
- Number of trials: [14]
- Trial indices: [[0, 12, 11, 10, 9, 5, 8, 7, 6, 2, 4, 13, 1, 3]]
[INFO 06-04 15:53:08] ax.api.client: Trial 13 marked EARLY_STOPPED.
[INFO 06-04 15:53:14] ax.api.client: Trial 14 marked COMPLETED.
[INFO 06-04 15:53:16] ax.api.client: Generated new trial 15 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.664278, 'x4': 0.343961, 'x5': 0.168351, 'x6': 0.714269} using GenerationNode MBM.
[INFO 06-04 15:53:16] ax.api.client: Generated new trial 16 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.134959, 'x4': 0.382242, 'x5': 0.132765, 'x6': 0.696402} using GenerationNode MBM.
[INFO 06-04 15:53:16] ax.api.client: Generated new trial 17 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.628362, 'x4': 0.347746, 'x5': 0.161015, 'x6': 0.692678} using GenerationNode MBM.
[INFO 06-04 15:53:22] ax.api.client: Trial 15 marked COMPLETED.
[INFO 06-04 15:53:29] ax.api.client: Trial 16 marked COMPLETED.
[INFO 06-04 15:53:29] ax.api.client: Trial 17 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.171523364238478]
- Thresholds: [2.7639548531518576]
- Number of trials: [18]
- Trial indices: [[0, 7, 6, 13, 14, 8, 12, 1, 4, 15, 5, 17, 2, 3, 11, 16, 10, 9]]
[INFO 06-04 15:53:29] ax.api.client: Trial 17 marked EARLY_STOPPED.
[INFO 06-04 15:53:31] ax.api.client: Generated new trial 18 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.439201, 'x4': 0.722784, 'x5': 0.233781, 'x6': 0.757023} using GenerationNode MBM.
[INFO 06-04 15:53:31] ax.api.client: Generated new trial 19 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.436682, 'x4': 0.633758, 'x5': 0.21574, 'x6': 0.735158} using GenerationNode MBM.
[INFO 06-04 15:53:31] ax.api.client: Generated new trial 20 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.410304, 'x4': 1.0, 'x5': 0.243879, 'x6': 0.784043} using GenerationNode MBM.
[INFO 06-04 15:53:32] ax.api.client: Trial 18 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [2.967403042569737]
- Thresholds: [2.816613103185129]
- Number of trials: [19]
- Trial indices: [[0, 17, 5, 8, 4, 6, 15, 12, 9, 2, 7, 14, 1, 16, 3, 13, 18, 10, 11]]
[INFO 06-04 15:53:32] ax.api.client: Trial 18 marked EARLY_STOPPED.
[INFO 06-04 15:53:32] ax.api.client: Trial 19 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2616549297533153]
- Thresholds: [2.873106584220177]
- Number of trials: [20]
- Trial indices: [[0, 12, 3, 17, 4, 16, 10, 18, 5, 11, 1, 13, 7, 6, 9, 2, 19, 14, 8, 15]]
[INFO 06-04 15:53:32] ax.api.client: Trial 19 marked EARLY_STOPPED.
[INFO 06-04 15:53:33] ax.api.client: Trial 20 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2976460366868245]
- Thresholds: [2.929600065255225]
- Number of trials: [21]
- Trial indices: [[0, 14, 13, 18, 8, 15, 3, 6, 17, 1, 16, 9, 19, 7, 4, 5, 12, 11, 20, 2, 10]]
[INFO 06-04 15:53:33] ax.api.client: Trial 20 marked EARLY_STOPPED.
[INFO 06-04 15:53:34] ax.api.client: Generated new trial 21 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.441718, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:34] ax.api.client: Generated new trial 22 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.462977, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:34] ax.api.client: Generated new trial 23 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.537773, 'x4': 1.0, 'x5': 1.0, 'x6': 0.137464} using GenerationNode MBM.
[INFO 06-04 15:53:35] ax.api.client: Trial 21 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3213830922538814]
- Thresholds: [2.948501553912481]
- Number of trials: [22]
- Trial indices: [[0, 8, 4, 12, 16, 19, 11, 10, 1, 20, 3, 5, 9, 17, 13, 6, 2, 7, 14, 18, 15, 21]]
[INFO 06-04 15:53:35] ax.api.client: Trial 21 marked EARLY_STOPPED.
[INFO 06-04 15:53:36] ax.api.client: Trial 22 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.313289870761129]
- Thresholds: [2.967403042569737]
- Number of trials: [23]
- Trial indices: [[0, 7, 6, 8, 9, 21, 1, 20, 11, 4, 3, 15, 12, 16, 10, 5, 18, 14, 22, 13, 19, 17, 2]]
[INFO 06-04 15:53:36] ax.api.client: Trial 22 marked EARLY_STOPPED.
[INFO 06-04 15:53:36] ax.api.client: Trial 23 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3171605845759085]
- Thresholds: [3.04542938076916]
- Number of trials: [24]
- Trial indices: [[0, 6, 19, 18, 12, 21, 1, 22, 7, 9, 17, 5, 13, 14, 2, 16, 11, 10, 20, 8, 15, 4, 3, 23]]
[INFO 06-04 15:53:36] ax.api.client: Trial 23 marked EARLY_STOPPED.
[INFO 06-04 15:53:37] ax.api.client: Generated new trial 24 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.470633, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:37] ax.api.client: Generated new trial 25 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.497928, 'x4': 0.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:37] ax.api.client: Generated new trial 26 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.498015, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:38] ax.api.client: Trial 24 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2937850161884943]
- Thresholds: [3.123455718968583]
- Number of trials: [25]
- Trial indices: [[20, 0, 19, 17, 18, 13, 14, 16, 15, 11, 9, 21, 22, 23, 12, 1, 10, 4, 2, 3, 7, 6, 5, 8, 24]]
[INFO 06-04 15:53:38] ax.api.client: Trial 24 marked EARLY_STOPPED.
[INFO 06-04 15:53:39] ax.api.client: Trial 25 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.278616115018311]
- Thresholds: [3.1474895416035307]
- Number of trials: [26]
- Trial indices: [[0, 23, 21, 24, 22, 17, 18, 20, 19, 11, 10, 12, 13, 15, 1, 16, 14, 4, 2, 3, 7, 6, 8, 25, 5, 9]]
[INFO 06-04 15:53:39] ax.api.client: Trial 25 marked EARLY_STOPPED.
[INFO 06-04 15:53:40] ax.api.client: Trial 26 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.301780348617208]
- Thresholds: [3.171523364238478]
- Number of trials: [27]
- Trial indices: [[0, 24, 25, 23, 21, 22, 20, 19, 17, 18, 15, 16, 12, 1, 13, 14, 10, 11, 9, 8, 7, 6, 4, 5, 2, 3, 26]]
[INFO 06-04 15:53:40] ax.api.client: Trial 26 marked EARLY_STOPPED.
[INFO 06-04 15:53:41] ax.api.client: Generated new trial 27 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.464513, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:41] ax.api.client: Generated new trial 28 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.501899, 'x4': 1.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:53:41] ax.api.client: Generated new trial 29 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.451557, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:42] ax.api.client: Trial 27 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.295790003449989]
- Thresholds: [3.177935362326555]
- Number of trials: [28]
- Trial indices: [[0, 25, 24, 23, 20, 21, 18, 22, 13, 15, 12, 14, 17, 16, 1, 19, 7, 2, 5, 6, 4, 3, 27, 26, 10, 9, 8, 11]]
[INFO 06-04 15:53:42] ax.api.client: Trial 27 marked EARLY_STOPPED.
[INFO 06-04 15:53:43] ax.api.client: Trial 28 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2882166042320353]
- Thresholds: [3.1843473604146317]
- Number of trials: [29]
- Trial indices: [[0, 25, 4, 3, 23, 24, 21, 5, 7, 6, 1, 20, 22, 18, 8, 2, 11, 9, 16, 15, 13, 14, 10, 12, 19, 17, 27, 26, 28]]
[INFO 06-04 15:53:43] ax.api.client: Trial 28 marked EARLY_STOPPED.
[INFO 06-04 15:53:43] ax.api.client: Trial 29 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3206186144575307]
- Thresholds: [3.18542295764237]
- Number of trials: [30]
- Trial indices: [[0, 24, 25, 9, 27, 22, 21, 23, 1, 10, 3, 12, 20, 18, 11, 19, 17, 16, 8, 15, 5, 26, 14, 29, 4, 28, 7, 13, 2, 6]]
[INFO 06-04 15:53:44] ax.api.client: Trial 29 marked EARLY_STOPPED.
[INFO 06-04 15:53:45] ax.api.client: Generated new trial 30 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.521982, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:45] ax.api.client: Generated new trial 31 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.484561, 'x4': 1.0, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:53:45] ax.api.client: Generated new trial 32 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.511857, 'x4': 0.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:46] ax.api.client: Trial 30 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.321296079228187]
- Thresholds: [3.1864985548701075]
- Number of trials: [31]
- Trial indices: [[0, 29, 5, 27, 24, 26, 23, 25, 1, 4, 19, 21, 6, 20, 7, 22, 9, 3, 12, 15, 28, 30, 14, 13, 8, 10, 11, 2, 18, 16, 17]]
[INFO 06-04 15:53:46] ax.api.client: Trial 30 marked EARLY_STOPPED.
[INFO 06-04 15:53:47] ax.api.client: Trial 31 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3161729395828154]
- Thresholds: [3.2169246554945135]
- Number of trials: [32]
- Trial indices: [[0, 26, 24, 4, 29, 27, 25, 12, 1, 23, 20, 6, 13, 21, 10, 14, 11, 22, 8, 28, 31, 16, 30, 15, 5, 7, 2, 17, 19, 18, 3, 9]]
[INFO 06-04 15:53:47] ax.api.client: Trial 31 marked EARLY_STOPPED.
[INFO 06-04 15:53:48] ax.api.client: Trial 32 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3099315279179486]
- Thresholds: [3.24735075611892]
- Number of trials: [33]
- Trial indices: [[32, 0, 16, 14, 4, 27, 29, 3, 13, 10, 17, 11, 28, 25, 12, 18, 5, 20, 1, 26, 6, 7, 31, 22, 9, 24, 30, 23, 21, 19, 8, 2, 15]]
[INFO 06-04 15:53:48] ax.api.client: Trial 32 marked EARLY_STOPPED.
[INFO 06-04 15:53:49] ax.api.client: Generated new trial 33 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.394851, 'x4': 0.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:49] ax.api.client: Generated new trial 34 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.529854, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:49] ax.api.client: Generated new trial 35 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.394515, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:50] ax.api.client: Trial 33 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2925172424651046]
- Thresholds: [3.254502842936118]
- Number of trials: [34]
- Trial indices: [[30, 3, 10, 19, 29, 6, 28, 9, 27, 26, 1, 17, 14, 13, 18, 21, 16, 25, 23, 15, 7, 8, 24, 4, 5, 20, 12, 32, 11, 0, 2, 22, 31, 33]]
[INFO 06-04 15:53:50] ax.api.client: Trial 33 marked EARLY_STOPPED.
[INFO 06-04 15:53:51] ax.api.client: Trial 34 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.320377079210131]
- Thresholds: [3.2616549297533153]
- Number of trials: [35]
- Trial indices: [[0, 31, 29, 18, 3, 1, 27, 30, 28, 22, 20, 19, 9, 11, 15, 16, 4, 6, 12, 8, 10, 26, 14, 7, 2, 33, 21, 23, 17, 13, 25, 24, 32, 5, 34]]
[INFO 06-04 15:53:51] ax.api.client: Trial 34 marked EARLY_STOPPED.
[INFO 06-04 15:53:52] ax.api.client: Trial 35 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.293895415261266]
- Thresholds: [3.270135522385813]
- Number of trials: [36]
- Trial indices: [[0, 10, 18, 19, 4, 32, 34, 16, 5, 31, 30, 1, 9, 11, 21, 20, 12, 22, 6, 8, 24, 28, 14, 13, 3, 23, 2, 26, 15, 7, 27, 29, 33, 25, 35, 17]]
[INFO 06-04 15:53:52] ax.api.client: Trial 35 marked EARLY_STOPPED.
[INFO 06-04 15:53:53] ax.api.client: Generated new trial 36 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.560433, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:53] ax.api.client: Generated new trial 37 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.527811, 'x4': 1.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:53:53] ax.api.client: Generated new trial 38 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.427348, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:54] ax.api.client: Trial 36 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2956719349833556]
- Thresholds: [3.278616115018311]
- Number of trials: [37]
- Trial indices: [[0, 3, 21, 12, 7, 31, 1, 33, 32, 25, 16, 23, 11, 29, 8, 6, 5, 30, 4, 18, 10, 24, 20, 19, 9, 13, 14, 17, 2, 27, 26, 28, 36, 34, 22, 35, 15]]
[INFO 06-04 15:53:54] ax.api.client: Trial 36 marked EARLY_STOPPED.
[INFO 06-04 15:53:55] ax.api.client: Trial 37 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3143945741295586]
- Thresholds: [3.283416359625173]
- Number of trials: [38]
- Trial indices: [[0, 35, 13, 24, 4, 25, 36, 23, 3, 1, 33, 32, 14, 34, 26, 28, 16, 15, 20, 19, 30, 8, 27, 21, 10, 11, 9, 29, 5, 18, 31, 7, 2, 17, 6, 12, 22, 37]]
[INFO 06-04 15:53:55] ax.api.client: Trial 37 marked EARLY_STOPPED.
[INFO 06-04 15:53:56] ax.api.client: Trial 38 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.304493097684738]
- Thresholds: [3.2882166042320353]
- Number of trials: [39]
- Trial indices: [[10, 7, 18, 37, 1, 17, 35, 11, 6, 21, 33, 5, 9, 20, 8, 19, 14, 34, 15, 22, 30, 3, 27, 26, 4, 25, 23, 12, 2, 32, 31, 24, 13, 16, 28, 29, 38, 0, 36]]
[INFO 06-04 15:53:56] ax.api.client: Trial 38 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/botorch/optim/optimize.py:844: RuntimeWarning: Optimization failed in gen_candidates_scipy with the following warning(s):
[OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .')]
Trying again with a new set of initial conditions.
  return _optimize_acqf_batch(opt_inputs=opt_inputs)
[INFO 06-04 15:53:58] ax.api.client: Generated new trial 39 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.526052, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:58] ax.api.client: Generated new trial 40 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.39239, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:58] ax.api.client: Generated new trial 41 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.421508, 'x4': 0.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:53:59] ax.api.client: Trial 39 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.293719811184269]
- Thresholds: [3.2903669233485697]
- Number of trials: [40]
- Trial indices: [[6, 25, 23, 0, 5, 24, 27, 37, 26, 22, 36, 1, 21, 20, 7, 38, 8, 3, 9, 13, 31, 10, 11, 12, 14, 17, 29, 19, 18, 4, 30, 28, 35, 32, 33, 15, 39, 2, 16, 34]]
[INFO 06-04 15:53:59] ax.api.client: Trial 39 marked EARLY_STOPPED.
[INFO 06-04 15:54:00] ax.api.client: Trial 40 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3214649355072265]
- Thresholds: [3.2925172424651046]
- Number of trials: [41]
- Trial indices: [[12, 38, 16, 31, 4, 15, 11, 30, 37, 5, 32, 1, 39, 27, 29, 13, 21, 19, 33, 26, 7, 25, 24, 34, 20, 9, 3, 17, 10, 18, 6, 28, 23, 36, 0, 2, 35, 22, 14, 8, 40]]
[INFO 06-04 15:54:00] ax.api.client: Trial 40 marked EARLY_STOPPED.
[INFO 06-04 15:54:01] ax.api.client: Trial 41 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3114323671343433]
- Thresholds: [3.2931185268246868]
- Number of trials: [42]
- Trial indices: [[0, 40, 38, 6, 15, 14, 36, 13, 37, 1, 34, 16, 9, 5, 7, 35, 12, 33, 31, 4, 19, 32, 3, 20, 18, 29, 8, 28, 30, 2, 21, 17, 22, 11, 10, 26, 27, 23, 25, 24, 41, 39]]
[INFO 06-04 15:54:01] ax.api.client: Trial 41 marked EARLY_STOPPED.
[INFO 06-04 15:54:03] ax.api.client: Generated new trial 42 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.395017, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:03] ax.api.client: Generated new trial 43 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.383738, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:03] ax.api.client: Generated new trial 44 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.474104, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:03] ax.api.client: Trial 42 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.320902497136019]
- Thresholds: [3.293719811184269]
- Number of trials: [43]
- Trial indices: [[0, 41, 39, 23, 37, 19, 22, 4, 11, 38, 35, 36, 1, 10, 20, 25, 18, 24, 13, 12, 32, 33, 34, 7, 8, 15, 28, 17, 31, 14, 3, 26, 40, 5, 9, 6, 30, 27, 16, 29, 2, 21, 42]]
[INFO 06-04 15:54:03] ax.api.client: Trial 42 marked EARLY_STOPPED.
[INFO 06-04 15:54:04] ax.api.client: Trial 43 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3138415878070884]
- Thresholds: [3.2937524136863816]
- Number of trials: [44]
- Trial indices: [[0, 19, 3, 40, 31, 28, 16, 29, 17, 38, 1, 39, 7, 15, 30, 27, 2, 32, 37, 4, 34, 26, 22, 11, 13, 25, 6, 18, 36, 21, 14, 5, 35, 12, 24, 8, 9, 42, 10, 41, 43, 20, 23, 33]]
[INFO 06-04 15:54:04] ax.api.client: Trial 43 marked EARLY_STOPPED.
[INFO 06-04 15:54:05] ax.api.client: Trial 44 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3213384921345956]
- Thresholds: [3.2937850161884943]
- Number of trials: [45]
- Trial indices: [[0, 22, 43, 42, 10, 26, 6, 41, 1, 38, 24, 12, 40, 37, 39, 4, 16, 28, 20, 34, 23, 25, 18, 35, 9, 15, 3, 36, 2, 17, 30, 33, 5, 21, 7, 31, 11, 32, 19, 29, 13, 27, 8, 14, 44]]
[INFO 06-04 15:54:05] ax.api.client: Trial 44 marked EARLY_STOPPED.
[INFO 06-04 15:54:11] ax.api.client: Generated new trial 45 with parameters {'x1': 0.0, 'x2': 0.196514, 'x3': 1.0, 'x4': 0.225832, 'x5': 0.345956, 'x6': 0.341898} using GenerationNode MBM.
[INFO 06-04 15:54:11] ax.api.client: Generated new trial 46 with parameters {'x1': 0.0, 'x2': 0.188704, 'x3': 1.0, 'x4': 0.590118, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:54:11] ax.api.client: Generated new trial 47 with parameters {'x1': 0.0, 'x2': 0.183371, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:54:12] ax.api.client: Trial 45 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.6725578017310507]
- Thresholds: [2.5579351736932523]
- Number of trials: [16]
- Trial indices: [[5, 4, 12, 15, 16, 7, 3, 1, 9, 14, 8, 11, 2, 0, 6, 45]]
[INFO 06-04 15:54:12] ax.api.client: Trial 45 marked EARLY_STOPPED.
[INFO 06-04 15:54:13] ax.api.client: Trial 46 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.7345869961378453]
- Thresholds: [2.5737930793686514]
- Number of trials: [17]
- Trial indices: [[0, 11, 1, 4, 6, 16, 8, 7, 12, 9, 2, 15, 45, 14, 3, 5, 46]]
[INFO 06-04 15:54:13] ax.api.client: Trial 46 marked EARLY_STOPPED.
[INFO 06-04 15:54:14] ax.api.client: Trial 47 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.742816690289441]
- Thresholds: [2.623175440549851]
- Number of trials: [18]
- Trial indices: [[11, 4, 46, 14, 1, 45, 15, 8, 16, 7, 5, 9, 2, 3, 6, 12, 0, 47]]
[INFO 06-04 15:54:14] ax.api.client: Trial 47 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/botorch/optim/optimize.py:844: RuntimeWarning: Optimization failed in gen_candidates_scipy with the following warning(s):
[OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .')]
Trying again with a new set of initial conditions.
  return _optimize_acqf_batch(opt_inputs=opt_inputs)
[INFO 06-04 15:54:16] ax.api.client: Generated new trial 48 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.417149, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:16] ax.api.client: Generated new trial 49 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.486854, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:16] ax.api.client: Generated new trial 50 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.493369, 'x4': 0.0, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:54:17] ax.api.client: Trial 48 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.295873830436545]
- Thresholds: [3.293719811184269]
- Number of trials: [49]
- Trial indices: [[0, 46, 9, 8, 17, 47, 10, 16, 13, 22, 23, 43, 19, 20, 45, 18, 7, 28, 30, 27, 14, 31, 29, 5, 25, 6, 26, 24, 11, 1, 44, 21, 34, 35, 36, 37, 39, 3, 38, 41, 32, 33, 2, 4, 42, 40, 15, 48, 12]]
[INFO 06-04 15:54:17] ax.api.client: Trial 48 marked EARLY_STOPPED.
[INFO 06-04 15:54:18] ax.api.client: Trial 49 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.320479522556068]
- Thresholds: [3.2937524136863816]
- Number of trials: [50]
- Trial indices: [[18, 9, 32, 33, 34, 4, 10, 48, 46, 17, 35, 37, 31, 30, 44, 1, 45, 27, 12, 5, 16, 36, 29, 28, 39, 19, 13, 3, 25, 6, 38, 8, 20, 21, 26, 7, 24, 23, 40, 15, 22, 41, 14, 11, 0, 2, 43, 42, 49, 47]]
[INFO 06-04 15:54:18] ax.api.client: Trial 49 marked EARLY_STOPPED.
[INFO 06-04 15:54:19] ax.api.client: Trial 50 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2975330860919327]
- Thresholds: [3.2937850161884943]
- Number of trials: [51]
- Trial indices: [[0, 15, 27, 7, 26, 28, 49, 25, 6, 10, 17, 32, 1, 31, 47, 30, 29, 19, 46, 45, 3, 4, 36, 9, 34, 20, 22, 35, 33, 5, 18, 11, 38, 37, 12, 16, 21, 40, 39, 8, 24, 41, 23, 2, 42, 14, 44, 13, 48, 43, 50]]
[INFO 06-04 15:54:19] ax.api.client: Trial 50 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
[INFO 06-04 15:54:23] ax.api.client: Generated new trial 51 with parameters {'x1': 0.0, 'x2': 0.300342, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.74562} using GenerationNode MBM.
[INFO 06-04 15:54:23] ax.api.client: Generated new trial 52 with parameters {'x1': 0.376792, 'x2': 0.977237, 'x3': 0.0, 'x4': 1.0, 'x5': 1.0, 'x6': 0.251571} using GenerationNode MBM.
[INFO 06-04 15:54:23] ax.api.client: Generated new trial 53 with parameters {'x1': 1.0, 'x2': 0.835377, 'x3': 1.0, 'x4': 1.0, 'x5': 1.0, 'x6': 0.190721} using GenerationNode MBM.
[INFO 06-04 15:54:24] ax.api.client: Trial 51 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.8401292717979123]
- Thresholds: [2.6725578017310507]
- Number of trials: [19]
- Trial indices: [[0, 5, 15, 8, 6, 9, 16, 11, 7, 1, 47, 14, 46, 4, 2, 45, 3, 12, 51]]
[INFO 06-04 15:54:24] ax.api.client: Trial 51 marked EARLY_STOPPED.
[INFO 06-04 15:54:25] ax.api.client: Trial 52 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.9588465852920387]
- Thresholds: [2.6758336905831226]
- Number of trials: [20]
- Trial indices: [[0, 52, 51, 14, 1, 8, 15, 16, 4, 7, 6, 11, 12, 5, 47, 2, 46, 9, 45, 3]]
[INFO 06-04 15:54:25] ax.api.client: Trial 52 marked EARLY_STOPPED.
[INFO 06-04 15:54:26] ax.api.client: Trial 53 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.321101114078965]
- Thresholds: [3.2937524136863816]
- Number of trials: [54]
- Trial indices: [[0, 53, 16, 27, 10, 19, 15, 45, 46, 3, 43, 25, 28, 12, 22, 23, 29, 30, 24, 52, 37, 38, 1, 21, 9, 31, 44, 42, 32, 41, 5, 2, 4, 48, 49, 47, 50, 34, 35, 7, 39, 40, 20, 26, 14, 13, 33, 18, 8, 36, 51, 11, 17, 6]]
[INFO 06-04 15:54:26] ax.api.client: Trial 53 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
[INFO 06-04 15:54:31] ax.api.client: Generated new trial 54 with parameters {'x1': 0.0, 'x2': 0.202411, 'x3': 1.0, 'x4': 0.392635, 'x5': 1.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:54:31] ax.api.client: Generated new trial 55 with parameters {'x1': 0.0, 'x2': 0.1493, 'x3': 1.0, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:31] ax.api.client: Generated new trial 56 with parameters {'x1': 0.429418, 'x2': 0.118916, 'x3': 1.0, 'x4': 1.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:32] ax.api.client: Trial 54 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.316667623345185]
- Thresholds: [3.2937850161884943]
- Number of trials: [55]
- Trial indices: [[0, 54, 52, 53, 29, 33, 30, 31, 51, 34, 32, 14, 49, 50, 28, 27, 6, 36, 26, 4, 1, 23, 24, 38, 25, 22, 15, 39, 10, 11, 35, 37, 7, 41, 21, 3, 48, 9, 40, 42, 16, 46, 44, 8, 47, 45, 43, 20, 17, 19, 18, 12, 5, 13, 2]]
[INFO 06-04 15:54:32] ax.api.client: Trial 54 marked EARLY_STOPPED.
[INFO 06-04 15:54:33] ax.api.client: Trial 55 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3214349544374766]
- Thresholds: [3.29384021572488]
- Number of trials: [56]
- Trial indices: [[0, 18, 9, 14, 4, 38, 37, 36, 52, 19, 33, 40, 35, 39, 34, 5, 31, 51, 50, 17, 16, 1, 20, 30, 41, 42, 3, 8, 21, 32, 28, 6, 43, 29, 22, 10, 49, 45, 44, 11, 15, 47, 26, 46, 23, 13, 25, 27, 48, 2, 55, 12, 7, 24, 54, 53]]
[INFO 06-04 15:54:33] ax.api.client: Trial 55 marked EARLY_STOPPED.
[INFO 06-04 15:54:34] ax.api.client: Trial 56 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3171203871426536]
- Thresholds: [3.293895415261266]
- Number of trials: [57]
- Trial indices: [[0, 55, 26, 36, 28, 8, 37, 34, 52, 53, 1, 51, 27, 32, 35, 29, 23, 9, 21, 14, 31, 16, 41, 13, 50, 30, 25, 7, 24, 5, 39, 38, 12, 20, 22, 17, 18, 19, 10, 15, 46, 3, 11, 47, 45, 54, 56, 44, 42, 33, 49, 2, 40, 48, 4, 6, 43]]
[INFO 06-04 15:54:34] ax.api.client: Trial 56 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
[INFO 06-04 15:54:36] ax.api.client: Generated new trial 57 with parameters {'x1': 0.145367, 'x2': 0.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.7943} using GenerationNode MBM.
[INFO 06-04 15:54:36] ax.api.client: Generated new trial 58 with parameters {'x1': 0.61238, 'x2': 1.0, 'x3': 0.670499, 'x4': 1.0, 'x5': 0.0, 'x6': 0.324526} using GenerationNode MBM.
[INFO 06-04 15:54:36] ax.api.client: Generated new trial 59 with parameters {'x1': 0.234748, 'x2': 0.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.922494} using GenerationNode MBM.
[INFO 06-04 15:54:37] ax.api.client: Trial 57 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.00499719603663]
- Thresholds: [2.6791095794351945]
- Number of trials: [21]
- Trial indices: [[57, 5, 1, 52, 16, 6, 11, 45, 9, 4, 7, 8, 14, 51, 15, 47, 2, 46, 3, 12, 0]]
[INFO 06-04 15:54:37] ax.api.client: Trial 57 marked EARLY_STOPPED.
[INFO 06-04 15:54:38] ax.api.client: Trial 58 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.1131841480998172]
- Thresholds: [2.70684828778652]
- Number of trials: [22]
- Trial indices: [[0, 1, 57, 15, 6, 9, 7, 14, 16, 8, 47, 3, 51, 2, 52, 12, 5, 45, 46, 11, 4, 58]]
[INFO 06-04 15:54:38] ax.api.client: Trial 58 marked EARLY_STOPPED.
[INFO 06-04 15:54:39] ax.api.client: Trial 59 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.996747848522697]
- Thresholds: [2.7345869961378453]
- Number of trials: [23]
- Trial indices: [[0, 59, 7, 12, 14, 3, 51, 52, 5, 58, 11, 16, 15, 9, 1, 57, 2, 47, 45, 8, 46, 6, 4]]
[INFO 06-04 15:54:39] ax.api.client: Trial 59 marked EARLY_STOPPED.
[INFO 06-04 15:54:41] ax.api.client: Generated new trial 60 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 1.0, 'x4': 1.0, 'x5': 0.282804, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:41] ax.api.client: Generated new trial 61 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 1.0, 'x5': 0.273931, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:54:41] ax.api.client: Generated new trial 62 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 1.0, 'x4': 0.612003, 'x5': 0.286205, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:42] ax.api.client: Trial 60 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.321621467017045]
- Thresholds: [3.2937850161884943]
- Number of trials: [61]
- Trial indices: [[17, 8, 53, 58, 4, 26, 59, 33, 1, 57, 36, 12, 7, 34, 48, 20, 45, 30, 40, 24, 31, 2, 9, 25, 15, 11, 16, 19, 37, 51, 56, 55, 35, 29, 44, 13, 22, 43, 10, 3, 52, 60, 46, 0, 32, 47, 18, 23, 14, 41, 27, 54, 42, 49, 38, 28, 50, 6, 21, 39, 5]]
[INFO 06-04 15:54:42] ax.api.client: Trial 60 marked EARLY_STOPPED.
[INFO 06-04 15:54:43] ax.api.client: Trial 61 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3038481814944913]
- Thresholds: [3.29384021572488]
- Number of trials: [62]
- Trial indices: [[12, 40, 11, 52, 7, 59, 55, 26, 60, 27, 56, 21, 38, 1, 3, 57, 29, 46, 45, 16, 49, 19, 18, 37, 28, 25, 20, 22, 36, 48, 10, 47, 53, 17, 35, 2, 31, 6, 34, 30, 9, 32, 23, 33, 58, 15, 0, 43, 44, 39, 42, 5, 61, 41, 14, 50, 54, 51, 13, 4, 8, 24]]
[INFO 06-04 15:54:43] ax.api.client: Trial 61 marked EARLY_STOPPED.
[INFO 06-04 15:54:44] ax.api.client: Trial 62 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3095259168150997]
- Thresholds: [3.293895415261266]
- Number of trials: [63]
- Trial indices: [[0, 62, 6, 5, 13, 39, 29, 31, 53, 57, 7, 60, 3, 14, 11, 41, 46, 37, 16, 38, 52, 28, 44, 15, 45, 27, 10, 47, 61, 1, 51, 59, 40, 36, 21, 9, 20, 2, 8, 42, 30, 12, 32, 34, 33, 58, 48, 19, 55, 25, 56, 54, 49, 18, 23, 43, 24, 26, 50, 22, 35, 4, 17]]
[INFO 06-04 15:54:44] ax.api.client: Trial 62 marked EARLY_STOPPED.
[INFO 06-04 15:54:46] ax.api.client: Generated new trial 63 with parameters {'x1': 0.0, 'x2': 0.934082, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.805678} using GenerationNode MBM.
[INFO 06-04 15:54:46] ax.api.client: Generated new trial 64 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 1.0, 'x4': 0.0, 'x5': 1.0, 'x6': 0.76609} using GenerationNode MBM.
[INFO 06-04 15:54:46] ax.api.client: Generated new trial 65 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.8089} using GenerationNode MBM.
[INFO 06-04 15:54:47] ax.api.client: Trial 63 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.1461450518756298]
- Thresholds: [2.738701843213643]
- Number of trials: [24]
- Trial indices: [[6, 58, 59, 47, 1, 16, 46, 5, 4, 8, 15, 7, 0, 3, 52, 63, 45, 11, 12, 9, 2, 51, 57, 14]]
[INFO 06-04 15:54:47] ax.api.client: Trial 63 marked EARLY_STOPPED.
[INFO 06-04 15:54:48] ax.api.client: Trial 64 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.301442882431212]
- Thresholds: [3.293895415261266]
- Number of trials: [65]
- Trial indices: [[0, 32, 56, 61, 57, 26, 10, 38, 1, 9, 53, 55, 19, 18, 21, 8, 40, 17, 29, 16, 33, 13, 47, 48, 22, 51, 50, 24, 54, 52, 15, 5, 11, 37, 34, 35, 30, 2, 23, 49, 4, 59, 7, 63, 20, 31, 6, 36, 27, 25, 39, 41, 60, 58, 62, 43, 14, 12, 45, 42, 28, 3, 44, 46, 64]]
[INFO 06-04 15:54:48] ax.api.client: Trial 64 marked EARLY_STOPPED.
[INFO 06-04 15:54:49] ax.api.client: Trial 65 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.0175991564347924]
- Thresholds: [2.742816690289441]
- Number of trials: [25]
- Trial indices: [[6, 7, 11, 9, 8, 5, 14, 15, 16, 12, 59, 4, 58, 57, 51, 52, 2, 45, 47, 63, 0, 46, 3, 1, 65]]
[INFO 06-04 15:54:49] ax.api.client: Trial 65 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
[INFO 06-04 15:54:53] ax.api.client: Generated new trial 66 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 1.0, 'x5': 1.0, 'x6': 0.759354} using GenerationNode MBM.
[INFO 06-04 15:54:53] ax.api.client: Generated new trial 67 with parameters {'x1': 0.1529, 'x2': 0.0, 'x3': 0.0, 'x4': 1.0, 'x5': 0.0, 'x6': 0.270116} using GenerationNode MBM.
[INFO 06-04 15:54:53] ax.api.client: Generated new trial 68 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 1.0, 'x5': 0.0, 'x6': 0.789862} using GenerationNode MBM.
[INFO 06-04 15:54:54] ax.api.client: Trial 66 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3218002844318986]
- Thresholds: [3.293895415261266]
- Number of trials: [67]
- Trial indices: [[0, 63, 10, 60, 9, 32, 58, 8, 31, 13, 1, 11, 57, 12, 56, 30, 55, 14, 53, 50, 15, 51, 48, 4, 26, 33, 3, 29, 28, 35, 52, 54, 49, 17, 47, 16, 27, 37, 18, 21, 34, 25, 65, 59, 64, 7, 61, 36, 23, 24, 38, 40, 6, 39, 20, 41, 2, 22, 43, 45, 42, 44, 46, 19, 62, 5, 66]]
[INFO 06-04 15:54:54] ax.api.client: Trial 66 marked EARLY_STOPPED.
[INFO 06-04 15:54:55] ax.api.client: Trial 67 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.320921451507938]
- Thresholds: [3.2947836751223107]
- Number of trials: [68]
- Trial indices: [[66, 62, 63, 61, 30, 28, 26, 25, 31, 32, 29, 33, 27, 24, 4, 34, 35, 3, 59, 9, 8, 38, 36, 23, 21, 22, 40, 37, 20, 41, 39, 42, 43, 60, 58, 10, 19, 17, 44, 46, 2, 18, 15, 47, 45, 51, 48, 49, 16, 11, 1, 56, 57, 52, 50, 13, 5, 12, 53, 54, 55, 14, 64, 7, 6, 0, 65, 67]]
[INFO 06-04 15:54:55] ax.api.client: Trial 67 marked EARLY_STOPPED.
[INFO 06-04 15:54:56] ax.api.client: Trial 68 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.310448303583408]
- Thresholds: [3.2956719349833556]
- Number of trials: [69]
- Trial indices: [[0, 9, 64, 63, 42, 44, 43, 11, 45, 40, 10, 62, 12, 47, 39, 38, 41, 6, 18, 16, 50, 48, 34, 37, 1, 15, 46, 36, 60, 61, 13, 14, 4, 56, 22, 25, 27, 28, 5, 53, 26, 65, 8, 52, 54, 55, 24, 29, 31, 19, 30, 23, 51, 2, 58, 33, 20, 21, 49, 32, 59, 57, 17, 35, 66, 67, 3, 68, 7]]
[INFO 06-04 15:54:56] ax.api.client: Trial 68 marked EARLY_STOPPED.
[INFO 06-04 15:54:58] ax.api.client: Generated new trial 69 with parameters {'x1': 0.0, 'x2': 0.649323, 'x3': 1.0, 'x4': 0.416286, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:58] ax.api.client: Generated new trial 70 with parameters {'x1': 0.0, 'x2': 0.829283, 'x3': 1.0, 'x4': 0.432562, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:58] ax.api.client: Generated new trial 71 with parameters {'x1': 0.0, 'x2': 0.547545, 'x3': 1.0, 'x4': 0.393247, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:54:59] ax.api.client: Trial 69 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.084283262736556]
- Thresholds: [2.7674566158973657]
- Number of trials: [26]
- Trial indices: [[63, 9, 45, 3, 15, 1, 5, 16, 46, 12, 58, 11, 59, 57, 47, 6, 51, 4, 7, 14, 52, 2, 65, 69, 8, 0]]
[INFO 06-04 15:54:59] ax.api.client: Trial 69 marked EARLY_STOPPED.
[INFO 06-04 15:55:00] ax.api.client: Trial 70 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.028614882194797]
- Thresholds: [2.7920965415052903]
- Number of trials: [27]
- Trial indices: [[0, 70, 69, 3, 16, 15, 47, 51, 7, 1, 52, 4, 63, 2, 57, 14, 6, 59, 12, 58, 11, 5, 65, 8, 9, 45, 46]]
[INFO 06-04 15:55:00] ax.api.client: Trial 70 marked EARLY_STOPPED.
[INFO 06-04 15:55:01] ax.api.client: Trial 71 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.123723010360119]
- Thresholds: [2.8161129066516013]
- Number of trials: [28]
- Trial indices: [[0, 9, 11, 8, 69, 12, 7, 16, 65, 15, 14, 63, 6, 1, 5, 59, 3, 47, 2, 45, 46, 58, 4, 57, 52, 51, 71, 70]]
[INFO 06-04 15:55:01] ax.api.client: Trial 71 marked EARLY_STOPPED.
[INFO 06-04 15:55:04] ax.api.client: Generated new trial 72 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 1.0, 'x4': 1.0, 'x5': 0.0, 'x6': 0.808866} using GenerationNode MBM.
[INFO 06-04 15:55:04] ax.api.client: Generated new trial 73 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.0, 'x4': 0.0, 'x5': 0.0, 'x6': 0.802023} using GenerationNode MBM.
[INFO 06-04 15:55:04] ax.api.client: Generated new trial 74 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 0.0, 'x5': 1.0, 'x6': 0.290341} using GenerationNode MBM.
[INFO 06-04 15:55:05] ax.api.client: Trial 72 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.111879899580785]
- Thresholds: [2.8401292717979123]
- Number of trials: [29]
- Trial indices: [[0, 9, 11, 71, 6, 1, 69, 14, 65, 8, 52, 51, 12, 3, 57, 7, 58, 59, 45, 4, 5, 63, 16, 15, 47, 2, 70, 46, 72]]
[INFO 06-04 15:55:05] ax.api.client: Trial 72 marked EARLY_STOPPED.
[INFO 06-04 15:55:07] ax.api.client: Trial 73 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.0356389791568223]
- Thresholds: [2.8994879285449757]
- Number of trials: [30]
- Trial indices: [[0, 72, 71, 69, 12, 1, 5, 65, 14, 15, 6, 4, 9, 8, 63, 45, 47, 46, 59, 3, 52, 58, 51, 2, 16, 73, 57, 11, 70, 7]]
[INFO 06-04 15:55:07] ax.api.client: Trial 73 marked EARLY_STOPPED.
[INFO 06-04 15:55:08] ax.api.client: Trial 74 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3192797655739747]
- Thresholds: [3.2937850161884943]
- Number of trials: [75]
- Trial indices: [[28, 0, 11, 18, 22, 72, 70, 1, 37, 21, 27, 68, 67, 69, 66, 30, 43, 19, 40, 10, 44, 26, 7, 65, 8, 62, 35, 38, 3, 63, 64, 12, 31, 60, 45, 24, 49, 4, 20, 41, 54, 52, 61, 13, 23, 36, 56, 47, 15, 9, 48, 32, 55, 50, 46, 14, 2, 59, 33, 25, 6, 39, 53, 5, 73, 34, 57, 51, 16, 71, 29, 42, 17, 74, 58]]
[INFO 06-04 15:55:08] ax.api.client: Trial 74 marked EARLY_STOPPED.
[INFO 06-04 15:55:10] ax.api.client: Generated new trial 75 with parameters {'x1': 0.0, 'x2': 0.167934, 'x3': 1.0, 'x4': 0.99656, 'x5': 0.256739, 'x6': 0.517094} using GenerationNode MBM.
[INFO 06-04 15:55:10] ax.api.client: Generated new trial 76 with parameters {'x1': 0.0, 'x2': 0.213915, 'x3': 1.0, 'x4': 0.34836, 'x5': 0.253782, 'x6': 0.459582} using GenerationNode MBM.
[INFO 06-04 15:55:10] ax.api.client: Generated new trial 77 with parameters {'x1': 0.0, 'x2': 0.027066, 'x3': 1.0, 'x4': 1.0, 'x5': 0.253653, 'x6': 0.390212} using GenerationNode MBM.
[INFO 06-04 15:55:11] ax.api.client: Trial 75 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3023894740235016]
- Thresholds: [3.29384021572488]
- Number of trials: [76]
- Trial indices: [[33, 30, 0, 74, 11, 71, 32, 28, 40, 69, 5, 42, 67, 1, 31, 38, 10, 13, 41, 43, 47, 64, 15, 66, 7, 27, 29, 46, 14, 68, 45, 44, 48, 4, 25, 65, 9, 49, 6, 35, 24, 70, 56, 3, 55, 60, 19, 53, 22, 20, 18, 17, 23, 50, 52, 54, 26, 62, 51, 61, 2, 63, 16, 34, 58, 59, 21, 37, 57, 39, 36, 8, 72, 75, 12, 73]]
[INFO 06-04 15:55:11] ax.api.client: Trial 75 marked EARLY_STOPPED.
[INFO 06-04 15:55:22] ax.api.client: Trial 76 marked COMPLETED.
[INFO 06-04 15:55:24] ax.api.client: Trial 77 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.31687660620036]
- Thresholds: [3.29384021572488]
- Number of trials: [78]
- Trial indices: [[0, 77, 7, 71, 72, 10, 33, 40, 37, 38, 29, 3, 39, 35, 43, 41, 31, 32, 11, 70, 68, 69, 28, 44, 42, 26, 47, 45, 46, 30, 48, 49, 4, 25, 52, 50, 67, 1, 14, 24, 21, 2, 51, 27, 20, 54, 55, 53, 23, 17, 56, 57, 22, 12, 65, 66, 5, 13, 59, 60, 58, 18, 19, 15, 63, 61, 64, 62, 16, 75, 73, 9, 8, 36, 34, 76, 74, 6]]
[INFO 06-04 15:55:24] ax.api.client: Trial 77 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/botorch/optim/optimize.py:844: RuntimeWarning: Optimization failed in gen_candidates_scipy with the following warning(s):
[OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .'), OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .'), OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .')]
Trying again with a new set of initial conditions.
  return _optimize_acqf_batch(opt_inputs=opt_inputs)
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/botorch/optim/optimize.py:844: RuntimeWarning: Optimization failed in gen_candidates_scipy with the following warning(s):
[OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .'), OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .')]
Trying again with a new set of initial conditions.
  return _optimize_acqf_batch(opt_inputs=opt_inputs)
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/botorch/optim/optimize.py:844: RuntimeWarning: Optimization failed on the second try, after generating a new set of initial conditions.
  return _optimize_acqf_batch(opt_inputs=opt_inputs)
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/botorch/optim/optimize.py:844: RuntimeWarning: Optimization failed in gen_candidates_scipy with the following warning(s):
[OptimizationWarning('Optimization failed within scipy.optimize.minimize with status 2 and message ABNORMAL: .')]
Trying again with a new set of initial conditions.
  return _optimize_acqf_batch(opt_inputs=opt_inputs)
[INFO 06-04 15:55:27] ax.api.client: Generated new trial 78 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.535166, 'x4': 0.0, 'x5': 0.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:55:27] ax.api.client: Generated new trial 79 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.51104, 'x4': 1.0, 'x5': 1.0, 'x6': 0.0} using GenerationNode MBM.
[INFO 06-04 15:55:27] ax.api.client: Generated new trial 80 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 0.531389, 'x4': 0.0, 'x5': 0.0, 'x6': 1.0} using GenerationNode MBM.
[INFO 06-04 15:55:28] ax.api.client: Trial 78 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3130185747971344]
- Thresholds: [3.293895415261266]
- Number of trials: [79]
- Trial indices: [[0, 76, 74, 9, 11, 8, 75, 10, 14, 12, 13, 18, 16, 15, 71, 73, 19, 17, 1, 72, 7, 20, 26, 30, 25, 68, 24, 27, 23, 70, 22, 21, 69, 28, 67, 29, 33, 6, 65, 31, 35, 32, 34, 47, 61, 60, 4, 46, 40, 63, 44, 2, 45, 42, 43, 41, 37, 64, 62, 39, 38, 5, 66, 36, 49, 59, 50, 51, 52, 58, 57, 53, 3, 54, 48, 55, 78, 77, 56]]
[INFO 06-04 15:55:28] ax.api.client: Trial 78 marked EARLY_STOPPED.
[INFO 06-04 15:55:30] ax.api.client: Trial 79 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.2957225901654708]
- Thresholds: [3.2947836751223107]
- Number of trials: [80]
- Trial indices: [[9, 75, 33, 36, 34, 39, 35, 37, 38, 32, 5, 40, 6, 76, 10, 11, 45, 12, 1, 73, 27, 46, 29, 47, 31, 43, 41, 44, 42, 30, 72, 74, 14, 15, 22, 70, 57, 3, 56, 7, 8, 21, 58, 60, 68, 59, 55, 23, 4, 69, 49, 51, 54, 52, 53, 24, 50, 28, 25, 26, 71, 48, 13, 66, 18, 65, 2, 16, 77, 79, 78, 20, 63, 61, 17, 19, 62, 64, 67, 0]]
[INFO 06-04 15:55:30] ax.api.client: Trial 79 marked EARLY_STOPPED.
[INFO 06-04 15:55:31] ax.api.client: Trial 80 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [2.9981864732932983]
- Thresholds: [2.8994879285449757]
- Number of trials: [32]
- Trial indices: [[0, 45, 5, 57, 3, 14, 1, 7, 58, 59, 52, 4, 63, 65, 46, 15, 73, 9, 6, 16, 2, 51, 71, 69, 8, 47, 72, 70, 76, 12, 11, 80]]
[INFO 06-04 15:55:31] ax.api.client: Trial 80 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
[INFO 06-04 15:55:33] ax.api.client: Generated new trial 81 with parameters {'x1': 0.0, 'x2': 0.124072, 'x3': 1.0, 'x4': 1.0, 'x5': 0.263605, 'x6': 0.747301} using GenerationNode MBM.
[INFO 06-04 15:55:33] ax.api.client: Generated new trial 82 with parameters {'x1': 0.0, 'x2': 0.160453, 'x3': 1.0, 'x4': 0.584596, 'x5': 0.276227, 'x6': 0.752265} using GenerationNode MBM.
[INFO 06-04 15:55:33] ax.api.client: Generated new trial 83 with parameters {'x1': 0.0, 'x2': 0.0, 'x3': 1.0, 'x4': 1.0, 'x5': 0.278217, 'x6': 0.72518} using GenerationNode MBM.
[INFO 06-04 15:55:35] ax.api.client: Trial 81 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.0749881800340026]
- Thresholds: [2.9588465852920387]
- Number of trials: [33]
- Trial indices: [[81, 14, 1, 76, 59, 7, 3, 63, 8, 4, 11, 6, 58, 72, 45, 47, 70, 65, 9, 16, 71, 73, 46, 15, 51, 0, 12, 57, 69, 2, 5, 52, 80]]
[INFO 06-04 15:55:35] ax.api.client: Trial 81 marked EARLY_STOPPED.
[INFO 06-04 15:55:36] ax.api.client: Trial 82 should be stopped early: Trial objective values at progressions in [12.00, 12.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [12.0]
- Underperforms: [True]
- Trial objective values: [2.44577242436298]
- Thresholds: [2.4165463859339944]
- Number of trials: [17]
- Trial indices: [[0, 82, 4, 3, 7, 9, 1, 11, 5, 15, 8, 6, 2, 14, 76, 16, 12]]
[INFO 06-04 15:55:36] ax.api.client: Trial 82 marked EARLY_STOPPED.
[INFO 06-04 15:55:37] ax.api.client: Trial 83 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.142214790539627]
- Thresholds: [2.9588465852920387]
- Number of trials: [35]
- Trial indices: [[0, 6, 51, 82, 8, 14, 47, 65, 63, 58, 16, 1, 4, 76, 57, 5, 2, 73, 70, 69, 3, 52, 59, 9, 12, 45, 7, 80, 11, 72, 81, 15, 83, 46, 71]]
[INFO 06-04 15:55:37] ax.api.client: Trial 83 marked EARLY_STOPPED.
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
/opt/hostedtoolcache/Python/3.14.5/x64/lib/python3.14/site-packages/linear_operator/utils/cholesky.py:41: NumericalWarning: A not p.d., added jitter of 1.0e-08 to the diagonal
  warnings.warn(
[INFO 06-04 15:55:40] ax.api.client: Generated new trial 84 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 0.0, 'x4': 1.0, 'x5': 0.310264, 'x6': 0.744399} using GenerationNode MBM.
[INFO 06-04 15:55:40] ax.api.client: Generated new trial 85 with parameters {'x1': 0.0, 'x2': 1.0, 'x3': 1.0, 'x4': 0.0, 'x5': 0.312252, 'x6': 0.7483} using GenerationNode MBM.
[INFO 06-04 15:55:40] ax.api.client: Generated new trial 86 with parameters {'x1': 1.0, 'x2': 0.0, 'x3': 0.0, 'x4': 0.0, 'x5': 1.0, 'x6': 0.603572} using GenerationNode MBM.
[INFO 06-04 15:55:41] ax.api.client: Trial 84 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.320936009299014]
- Thresholds: [3.2937850161884943]
- Number of trials: [85]
- Trial indices: [[0, 50, 83, 81, 32, 35, 1, 84, 66, 68, 48, 80, 4, 67, 10, 51, 11, 34, 6, 70, 31, 3, 79, 33, 46, 78, 65, 45, 19, 47, 17, 53, 18, 36, 74, 63, 13, 22, 23, 62, 25, 21, 56, 58, 39, 75, 9, 30, 60, 77, 73, 29, 14, 8, 71, 64, 57, 54, 38, 37, 55, 72, 20, 24, 43, 26, 42, 2, 16, 69, 12, 40, 28, 76, 7, 82, 52, 49, 15, 41, 5, 61, 44, 59, 27]]
[INFO 06-04 15:55:41] ax.api.client: Trial 84 marked EARLY_STOPPED.
[INFO 06-04 15:55:43] ax.api.client: Trial 85 should be stopped early: Trial objective values at progressions in [11.00, 11.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [11.0]
- Underperforms: [True]
- Trial objective values: [3.136007071836966]
- Thresholds: [2.977797216907368]
- Number of trials: [36]
- Trial indices: [[0, 9, 46, 76, 3, 7, 14, 57, 72, 58, 12, 81, 1, 15, 59, 73, 71, 5, 45, 80, 52, 4, 69, 2, 11, 70, 65, 6, 8, 16, 51, 82, 63, 83, 47, 85]]
[INFO 06-04 15:55:43] ax.api.client: Trial 85 marked EARLY_STOPPED.
[INFO 06-04 15:55:44] ax.api.client: Trial 86 should be stopped early: Trial objective values at progressions in [10.00, 10.00] are all worse than 50.0-th percentile across comparable trials 
- Progressions: [10.0]
- Underperforms: [True]
- Trial objective values: [3.3218813410253993]
- Thresholds: [3.2937850161884943]
- Number of trials: [87]
- Trial indices: [[0, 85, 83, 70, 50, 52, 47, 49, 9, 48, 10, 51, 72, 4, 46, 74, 71, 69, 18, 19, 65, 75, 11, 73, 67, 68, 44, 12, 45, 5, 3, 39, 41, 42, 43, 6, 62, 59, 82, 53, 54, 55, 38, 13, 40, 14, 36, 37, 76, 1, 24, 17, 8, 57, 33, 34, 15, 35, 56, 32, 30, 31, 58, 2, 77, 26, 23, 25, 66, 60, 7, 79, 28, 29, 27, 81, 78, 64, 16, 80, 20, 84, 63, 21, 22, 61, 86]]
[INFO 06-04 15:55:44] ax.api.client: Trial 86 marked EARLY_STOPPED.`
}
</CellOutput>

## Step 6: Analyze Results

After running trials, you can analyze the results. Most commonly this means extracting
the parameterization from the best performing trial you conducted.

```python
best_parameters, prediction, index, name = client.get_best_parameterization()
print("Best Parameters:", best_parameters)
print("Prediction (mean, variance):", prediction)
```

<CellOutput>
{
`Best Parameters: {'x1': 0.0, 'x2': 0.2972608562469375, 'x3': 0.4432907322574122, 'x4': 0.38576889071228176, 'x5': 0.25156710615997596, 'x6': 0.7480246641709661}
Prediction (mean, variance): {'hartmann6': (np.float64(-2.0731110296621713), np.float64(0.003185400632070759))}`
}
</CellOutput>

## Step 7: Compute Analyses

Ax can also produce a number of analyses to help interpret the results of the experiment
via `client.compute_analyses`. Users can manually select which analyses to run, or can
allow Ax to select which would be most relevant. In this case Ax selects the following:

- **Arm Effects Plots** show the metric value for each
  [arm](https://ax.dev/docs/next/glossary#arm) on the experiment. Ax produces one plot
  using values from its internal surrogate model (this can be helpful for seeing the
  true effect of an arm when evaluations are noisy) and another using the raw metric
  values as observed.
- **Summary** lists all trials generated along with their parameterizations,
  observations, and miscellaneous metadata
- **Sensitivity Analysis Plot** shows which parameters have the largest affect on the
  objective using
  [Sobol Indicies](https://en.wikipedia.org/wiki/Variance-based_sensitivity_analysis)
- **Slice Plot** shows how the model predicts a single parameter effects the objective
  along with a confidence interval
- **Contour Plot** shows how the model predicts a pair of parameters effects the
  objective as a 2D surface
- **Cross Validation** helps to visualize how well the surrogate model is able to
  predict out of sample points

```python
# display=True instructs Ax to sort then render the resulting analyses
cards = client.compute_analyses(display=True)
```

**Modeled Arm Effects on hartmann6**

Modeled effects on hartmann6. This plot visualizes predictions of the true metric
changes for each arm based on Ax's model. This is the expected delta you would expect if
you (re-)ran that arm. This plot helps in anticipating the outcomes and performance of
arms based on the model's predictions. Note, flat predictions across arms indicate that
the model predicts that there is no effect, meaning if you were to re-run the
experiment, the delta you would see would be small and fall within the confidence
interval indicated in the plot.



<PlotlyFigure data={require('./assets/plot_data/45cc81d1-db31-4a77-8188-0d1a09970059.json')} />


**Observed Arm Effects on hartmann6**

Observed effects on hartmann6. This plot visualizes the effects from previously-run arms
on a specific metric, providing insights into their performance. This plot allows one to
compare and contrast the effectiveness of different arms, highlighting which
configurations have yielded the most favorable outcomes.



<PlotlyFigure data={require('./assets/plot_data/035c8339-7ec2-4612-ac76-5e50b4d5f254.json')} />


**Utility Progression**

Shows the best hartmann6 value achieved so far across completed trials (objective is to
minimize). The x-axis shows trial index. Only completed or early-stopped trials with
complete metric data are included, so there may be gaps if some trials failed, were
abandoned, or have incomplete data. The y-axis shows cumulative best utility. Only
improvements are plotted, so flat segments indicate trials that didn't surpass the
previous best. Infeasible trials (violating outcome constraints) don't contribute to the
improvements.



<PlotlyFigure data={require('./assets/plot_data/7ea98f74-5c08-4d2c-a0d8-f4fb2c8279ce.json')} />


**hartmann6 by progression**

The progression plot tracks the evolution of each metric over the course of the
experiment. This visualization is typically used to monitor the improvement of metrics
over Trial iterations, but can also be useful in informing decisions about early
stopping for Trials.



<PlotlyFigure data={require('./assets/plot_data/ffafd96e-0bb2-4db5-8b39-f9f5034d7508.json')} />


**hartmann6 by wallclock time**

The progression plot tracks the evolution of each metric over the course of the
experiment. This visualization is typically used to monitor the improvement of metrics
over Trial iterations, but can also be useful in informing decisions about early
stopping for Trials.



<PlotlyFigure data={require('./assets/plot_data/b1488210-7326-48b4-9b39-c93db4e01d5a.json')} />


**Best Trial for Experiment**

Displays the trial with the best objective value based on raw observations. This
reflects actual measured performance during execution. This trial achieved the optimal
objective value and represents the recommended configuration for your optimization goal.
Only considering COMPLETED trials.




|    |   trial_index |   arm_name | trial_status   | generation_node   |   hartmann6 |   x1 |       x2 |       x3 |       x4 |       x5 |       x6 |
|---:|--------------:|-----------:|:---------------|:------------------|------------:|-----:|---------:|---------:|---------:|---------:|---------:|
|  0 |            14 |       14_0 | COMPLETED      | MBM               |    -2.10767 |    0 | 0.297261 | 0.443291 | 0.385769 | 0.251567 | 0.748025 |


**Summary for Experiment**

High-level summary of the `Trial`-s in this `Experiment`




|     | trial_index   | arm_name   | trial_status   | generation_node     | hartmann6   | x1       | x2       | x3       | x4       | x5       | x6       |
|:----|:--------------|:-----------|:---------------|:--------------------|:------------|:---------|:---------|:---------|:---------|:---------|:---------|
| 0   | 0             | 0_0        | COMPLETED      | CenterOfSearchSpace | -0.505315   | 0.500000 | 0.500000 | 0.500000 | 0.500000 | 0.500000 | 0.500000 |
| 1   | 1             | 1_0        | COMPLETED      | Sobol               | -0.642347   | 0.210730 | 0.499873 | 0.262615 | 0.267971 | 0.422508 | 0.998031 |
| 2   | 2             | 2_0        | COMPLETED      | Sobol               | -0.007757   | 0.891623 | 0.913370 | 0.605058 | 0.712411 | 0.542005 | 0.479806 |
| 3   | 3             | 3_0        | COMPLETED      | Sobol               | -0.004248   | 0.637901 | 0.180224 | 0.235148 | 0.064872 | 0.938703 | 0.147364 |
| 4   | 4             | 4_0        | COMPLETED      | Sobol               | -0.074577   | 0.449196 | 0.718845 | 0.898149 | 0.884310 | 0.088493 | 0.625302 |
| ... | ...           | ...        | ...            | ...                 | ...         | ...      | ...      | ...      | ...      | ...      | ...      |
| 82  | 82            | 82_0       | EARLY_STOPPED  | MBM                 | 2.445772    | 0.000000 | 0.160453 | 1.000000 | 0.584596 | 0.276227 | 0.752265 |
| 83  | 83            | 83_0       | EARLY_STOPPED  | MBM                 | 3.142215    | 0.000000 | 0.000000 | 1.000000 | 1.000000 | 0.278217 | 0.725180 |
| 84  | 84            | 84_0       | EARLY_STOPPED  | MBM                 | 3.320936    | 0.000000 | 1.000000 | 0.000000 | 1.000000 | 0.310264 | 0.744399 |
| 85  | 85            | 85_0       | EARLY_STOPPED  | MBM                 | 3.136007    | 0.000000 | 1.000000 | 1.000000 | 0.000000 | 0.312252 | 0.748300 |
| 86  | 86            | 86_0       | EARLY_STOPPED  | MBM                 | 3.321881    | 1.000000 | 0.000000 | 0.000000 | 0.000000 | 1.000000 | 0.603572 |


**Sensitivity Analysis for hartmann6**

Understand how each parameter affects hartmann6 according to a second-order sensitivity
analysis.



<PlotlyFigure data={require('./assets/plot_data/6129534b-220a-4253-a878-1fa63ef0bbec.json')} />


**hartmann6 vs. x6**

The slice plot provides a one-dimensional view of predicted outcomes for hartmann6 as a
function of a single parameter, while keeping all other parameters fixed at their best
trial value (Arm 14_0). This visualization helps in understanding the sensitivity and
impact of changes in the selected parameter on the predicted metric outcomes.



<PlotlyFigure data={require('./assets/plot_data/47e5effe-35a2-45d3-9604-aa8b88d4ddab.json')} />


**hartmann6 vs. x5**

The slice plot provides a one-dimensional view of predicted outcomes for hartmann6 as a
function of a single parameter, while keeping all other parameters fixed at their best
trial value (Arm 14_0). This visualization helps in understanding the sensitivity and
impact of changes in the selected parameter on the predicted metric outcomes.



<PlotlyFigure data={require('./assets/plot_data/4862fab0-a0a2-4c17-827a-345b4716cd55.json')} />


**hartmann6 (Mean) vs. x5, x6**

The contour plot visualizes the predicted outcomes for hartmann6 across a
two-dimensional parameter space, with other parameters held fixed at their best trial
value (Arm 14_0). This plot helps in identifying regions of optimal performance and
understanding how changes in the selected parameters influence the predicted outcomes.
Contour lines represent levels of constant predicted values, providing insights into the
gradient and potential optima within the parameter space.



<PlotlyFigure data={require('./assets/plot_data/bedbc9dd-8dc9-4bf3-92ab-03c3b88059be.json')} />


**Cross Validation for hartmann6 (R² = 0.98)**

The cross-validation plot displays the model fit for each metric in the experiment. It
employs a leave-one-out approach, where the model is trained on all data except one
sample, which is used for validation. The plot shows the predicted outcome for the
validation set on the y-axis against its actual value on the x-axis. Points that align
closely with the dotted diagonal line indicate a strong model fit, signifying accurate
predictions. Additionally, the plot includes 95% confidence intervals that provide
insight into the noise in observations and the uncertainty in model predictions. A
horizontal, flat line of predictions indicates that the model has not picked up on
sufficient signal in the data, and instead is just predicting the mean.



<PlotlyFigure data={require('./assets/plot_data/cc329617-7502-4f54-9f16-5bbe927bdc20.json')} />


**Summary of model fits**

R² (coefficient of determination) measures how well the model predicts each metric.
Higher values indicate better model fit. Metrics with R² >= 0.1 are highlighted in
green.



<PlotlyFigure data={require('./assets/plot_data/f5533075-a3cb-49ac-b8b1-017ed98dd08c.json')} />


**Generation Strategy Graph**

GenerationStrategy: Center+Sobol+MBM:fast

Visualize the structure of a GenerationStrategy as a directed graph. Each node
represents a GenerationNode in the strategy, and edges represent transitions between
nodes based on TransitionCriterion. Edge labels show the criterion class names that
trigger the transition.




|    | node_name           | generators   | transitions                        | is_current   |
|---:|:--------------------|:-------------|:-----------------------------------|:-------------|
|  0 | CenterOfSearchSpace | nan          | -> Sobol: AutoTransitionAfterGen   | False        |
|  1 | Sobol               | Sobol        | -> MBM: MinTrials(5), MinTrials(2) | False        |
|  2 | MBM                 | BoTorch      | nan                                | True         |


**Capacity savings due to early stopping**

Throughout this experiment, 71 trials were early stopped, out of a total of 87 trials.
The capacity savings (computed using step) are estimated to be 73%.




|    | Property             | Value     |
|---:|:---------------------|:----------|
|  0 | Early Stopped Trials | 71        |
|  1 | Completed Trials     | 16        |
|  2 | Failed Trials        | 0         |
|  3 | Running Trials       | 0         |
|  4 | Total Trials         | 87        |
|  5 | Target Metric        | hartmann6 |
|  6 | Estimated Savings    | 73%       |


**Baseline Improvement Healthcheck**

All 1 objective(s) improved over baseline.

**Metric `hartmann6` improved -317.10%** from `-0.51` in arm `'0_0'` to `-2.11` in arm
`'14_0'`.

**Note:** Using the first trial's first arm ('0_0') as the baseline since no explicit
baseline was provided.




|    | Metric    | Status   | Details                                           |
|---:|:----------|:---------|:--------------------------------------------------|
|  0 | hartmann6 | Improved | **Metric `hartmann6` improved -317.10%** from ... |

## Conclusion

This tutorial demonstates Ax's early stopping capabilities, which utilize
timeseries-like data to monitor the results of expensive evaluations and terminate those
that are unlikely to produce promising results, freeing up resources to explore more
configurations. This can be used in a number of applications, and is especially useful
in machine learning contexts.

